--- a/helm/templates/ilb-svc.yaml
+++ b/helm/templates/ilb-svc.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.gkeLoadBalancer.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -16,3 +17,4 @@ spec:
     protocol: TCP
     port: {{ .Values.service.port }}
     targetPort: {{ .Values.service.port }}
+{{- end }}
