--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -5,7 +5,7 @@
 ## Replica count for Deployment
 ## https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#deploymentspec-v1-apps
 ##
-replicaCount: 1
+replicaCount: 2
 
 ## The update strategy to apply to the Deployment
 ## https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#deploymentstrategy-v1-apps
@@ -19,7 +19,7 @@ updateStrategy:
 ## Interval between discrete pods transitions
 ## https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#deploymentspec-v1-apps
 ##
-minReadySeconds: 0
+minReadySeconds: 15
 
 ## Rollback limit
 ## https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#deploymentspec-v1-apps
@@ -40,7 +40,7 @@ image:
   repository: us-central1-docker.pkg.dev/db-black-belts-playground-01/pgbouncer-docker/pgbouncer
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "1.22.0"
+  tag: "1.22.1"
 
 ## Service configuration
 ## https://kubernetes.io/docs/concepts/services-networking/service/
@@ -158,10 +158,10 @@ runtimeClassName: ""
 ## place all configuration items here config
 ##
 config:
-  adminUser: admin
-  adminPassword: Google54321
-  authUser: pgbouncerAuth
-  authPassword: Google54321
+  adminUser: pgbouncer_meta_user
+  adminPassword: Google5432111
+  authUser: pgbouncer_auth_user
+  authPassword: Google543211
   listen_addr: "*"
   listen_port: 5432
   databases:
@@ -176,25 +176,30 @@ config:
     auth_query: SELECT p_user, p_password FROM public.lookup($1)
     pool_mode: transaction
     max_client_conn: 7500
-    min_pool_size: 25
-    default_pool_size: 50
+    min_pool_size: 10
+    default_pool_size: 25
     reserve_pool_size: 25
+    server_connect_timeout: 5
     client_tls_sslmode: disable
     server_tls_sslmode: prefer
     ignore_startup_parameters: extra_float_digits
+    track_extra_parameters: search_path, IntervalStyle
     max_prepared_statements: 200
+    max_db_connections: 50
+    application_name_add_host: 1
   userlist:
-    postgres: "SCRAM-SHA-256$4096:wIiyxsACoIe3lyFlM8vqMgdFvE+FtmXhe1pBkH/Mkt4=$DB2aQSCTgL03/buI1oYt7MbrWK5tF1rYSx8/0MdQvhc=:H3nYnTbcuo6Bq6I2Fxj6BH/FUIM+VkIRXmy8o6qQrg8="
+    postgres: "SCRAM-SHA-256$4096:nqaBsoznGf+FRVi3xmCA7A==$XM/qQuRMQbzYjzAeuwh1BzQvqh4ID2vnO3Z+IzRtGJk=:D0zUsSbq34xgXNR7bvIs3N737CcFc1xcDJxuWfF0JbU="
+    tpcc: "SCRAM-SHA-256$4096:bz2fnKSz1nrBqnFb1RCsew==$fpzFCmqkIPZxQY1rXBJT2NZH1YJ0trUZtkSJejhMnNY=:j/+hBKMg3S5UVyKKs7QFrzEIsn6hrOXfiYIhaurEhOE="
 
 ## pgBouncer Exporter container image and configuration
 ##
 pgbouncerExporter:
-  enabled: false
+  enabled: true
   port: 9127
   image:
     registry: ""
     repository: prometheuscommunity/pgbouncer-exporter
-    tag: v0.7.0
+    tag: v0.8.0
     pullPolicy: IfNotPresent
   log:
     level: info # or debug, warn, error
@@ -286,5 +291,5 @@ fullnameOverride: ""
 ## loadBalancerName used for the internal load balancer service
 ##
 gkeLoadBalancer:
-  enabled: false
+  enabled: true
   loadBalancerName: "gcp-bouncer-ilb"
