--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,17 +1,17 @@
 apiVersion: v2
-name: gcp-pgbouncer
-description: A Helm chart for deploying pgBouncer on Google Kubernetes Engine.  Based on chart published at icoretech.github.io/helm/charts/pgbouncer
+name: pgbouncer-container
+description: A Helm chart for deploying pgBouncer on Google Kubernetes Engine.  Based a modified chart orignially published at icoretech.github.io/helm/charts/pgbouncer
 type: application
 version: 0.1.0
-appVersion: 1.22.1
+appVersion: 1.23.1
 kubeVersion: ">= 1.28.3-gke.1286000"
 keywords:
   - pgBouncer
   - PostgreSQL
   - Kubernetes
-home: https://github.com/GoogleCloudPlatform
+home: https://github.com/shane-borden
 sources:
-  - https://github.com/GoogleCloudPlatform/google-pgbouncer
+  - https://github.com/shane-borden/pgbouncer-container
 annotations:
   artifacthub.io/license: "Apache-2.0"
   artifacthub.io/category: "database"
