--- a/helm/templates/configmap.yaml
+++ b/helm/templates/configmap.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "google-pgbouncer.fullname" . }}-configmap
+  name: {{ include "pgbouncer-container.fullname" . }}-configmap
   labels:
-    {{- include "google-pgbouncer.labels" . | nindent 4 }}
+    {{- include "pgbouncer-container.labels" . | nindent 4 }}
 data:
   pgbouncer.ini: |
     [databases]
