--- a/helm/templates/ilb-svc.yaml
+++ b/helm/templates/ilb-svc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "google-pgbouncer.ilb.name" . }}
+  name: {{ template "pgbouncer-container.ilb.name" . }}
   annotations:
     networking.gke.io/load-balancer-type: "Internal"
   namespace: {{ .Release.Namespace }}
@@ -10,7 +10,7 @@ spec:
   type: LoadBalancer
   externalTrafficPolicy: Cluster
   selector:
-    app.kubernetes.io/name: {{ template "google-pgbouncer.name" . }}
+    app.kubernetes.io/name: {{ template "pgbouncer-container.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
   ports:
   - name: tcp-port
