--- a/helm/templates/pdb.yaml
+++ b/helm/templates/pdb.yaml
@@ -2,9 +2,9 @@
 apiVersion: {{ template "podDisruptionBudget.apiVersion" . }}
 kind: PodDisruptionBudget
 metadata:
-  name: {{ template "google-pgbouncer.fullname" . }}
+  name: {{ template "pgbouncer-container.fullname" . }}
   labels:
-    {{- include "google-pgbouncer.labels" . | nindent 4 }}
+    {{- include "pgbouncer-container.labels" . | nindent 4 }}
 spec:
   {{- if .Values.podDisruptionBudget.maxUnavailable }}
   maxUnavailable: {{ .Values.podDisruptionBudget.maxUnavailable }}
@@ -14,5 +14,5 @@ spec:
   {{- end }}
   selector:
     matchLabels:
-      {{- include "google-pgbouncer.selectorLabels" . | nindent 6 }}
+      {{- include "pgbouncer-container.selectorLabels" . | nindent 6 }}
 {{- end }}
