--- a/helm/templates/secret.yaml
+++ b/helm/templates/secret.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "google-pgbouncer.fullname" . }}-secret
+  name: {{ template "pgbouncer-container.fullname" . }}-secret
   labels:
-    {{- include "google-pgbouncer.labels" . | nindent 4 }}
+    {{- include "pgbouncer-container.labels" . | nindent 4 }}
 type: Opaque
 data:
   adminUser: {{ required "A valid .Values.config.adminUser entry required!" .Values.config.adminUser | b64enc | quote }}
