--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "google-pgbouncer.fullname" . }}
+  name: {{ include "pgbouncer-container.fullname" . }}
   labels:
-    {{- include "google-pgbouncer.labels" . | nindent 4 }}
+    {{- include "pgbouncer-container.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,5 +12,5 @@ spec:
       protocol: TCP
       name: psql
   selector:
-    app.kubernetes.io/name: {{ template "google-pgbouncer.name" . }}
+    app.kubernetes.io/name: {{ template "pgbouncer-container.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
