--- a/helm/templates/serviceaccount.yaml
+++ b/helm/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "google-pgbouncer.serviceAccountName" . }}
+  name: {{ include "pgbouncer-container.serviceAccountName" . }}
   labels:
-    {{- include "google-pgbouncer.labels" . | nindent 4 }}
+    {{- include "pgbouncer-container.labels" . | nindent 4 }}
   {{ if .Values.serviceAccount.annotations -}}
   annotations: {{ .Values.serviceAccount.annotations | toYaml | trimSuffix "\n" | nindent 4 }}
   {{ end -}}
