--- a/helm/templates/userlist-secret.yaml
+++ b/helm/templates/userlist-secret.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "google-pgbouncer.fullname" . }}-userlist-secret
+  name: {{ template "pgbouncer-container.fullname" . }}-userlist-secret
   labels:
-    {{- include "google-pgbouncer.labels" . | nindent 4 }}
+    {{- include "pgbouncer-container.labels" . | nindent 4 }}
 data:
-  userlist.txt: {{ include "google-pgbouncer.secret.userlist" . | trim | b64enc }}
+  userlist.txt: {{ include "pgbouncer-container.secret.userlist" . | trim | b64enc }}
